added nav bar section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
     <title>Versatile UI</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    
+<body class="inter-font">
+    <header>
+        <nav class="navbar display-flex">
+            <div>
+                <h3 class="fitness"><i>Fitness</i></h3>
+            </div>
+            <div class="nav-border">
+                <ul class="nav-links display-flex">
+                    <li class="nav-item"><a href="" class="nav-link"><span id="home">Home</span></a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Packages</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Testimonial</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Blog</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
