--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
             <div class="nav-border">
                 <ul class="nav-links display-flex">
                     <li class="nav-item"><a href="" class="nav-link"><span id="home">Home</span></a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Packages</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Testimonial</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Blog</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Service</a></li>
                     <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">About</a></li>
                 </ul>
             </div>
         </nav>
