banner section added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Versatile UI</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/9479917e76.js" crossorigin="anonymous"></script>
 </head>
+
 <body class="inter-font">
     <header>
         <nav class="navbar display-flex">
@@ -21,6 +24,35 @@
                 </ul>
             </div>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1>Get body in <br> <span id="shape">shape</span> & stay <br> healthy</h1>
+                <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to
+                    help you get fit and stay fit!</p>
+                <div class="banner-btn">
+                    <button class="btn-primary">Join Club Now!</button>
+                    <button class="btn-primary1">Download App</button>
+                </div>
+
+            </div>
+            <div class="banner-img">
+                <img src="images/images 2.png" alt="">
+                <div id="vdo1">
+                    <i id="icon" class="fa-solid fa-play"></i>
+                    <div id="vdo">
+                        <span id="no">350+</span>
+                        <span id="video">Video tutorial</span>
+                    </div>
+                </div>
+                <div id="vdo2">
+                    <div id="vdo3">
+                        <span id="no">500+</span><br>
+                        <span id="video">Free Workout Videos</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </header>
 
     <main>
@@ -31,4 +63,5 @@
 
     </footer>
 </body>
+
 </html>
