added change your habit section and css

--- a/index.html
+++ b/index.html
@@ -56,7 +56,35 @@
     </header>
 
     <main>
-
+        <!-- change your habit section -->
+         <section>
+            <div class="habit-content">
+                <h2>Change Your Habits</h2>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+            </div>
+            <div class="main-habit-img-content">
+                <div class="habit-img-content">
+                    <img src="images/image 3.png" alt="">
+                    <h4>Movement</h4>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-img-content">
+                    <img src="images/image 2.png" alt="">
+                    <h4>Time</h4>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-img-content">
+                    <img src="images/image 4.png" alt="">
+                    <h4>Practice</h4>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-img-content">
+                    <img src="images/image 5.png" alt="">
+                    <h4>Weight Loss</h4>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+         </section>
     </main>
 
     <footer>
