added run an extra section and updated in css file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body class="inter-font">
     <header>
+       <section class="header-section">
         <nav class="navbar display-flex">
             <div>
                 <h3 class="fitness"><i>Fitness</i></h3>
@@ -52,15 +53,17 @@
                 </div>
             </div>
         </div>
+       </section>
 
     </header>
 
     <main>
         <!-- change your habit section -->
-         <section>
+        <section id="sec-1">
             <div class="habit-content">
                 <h2>Change Your Habits</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access
+                    to a gym.</p>
             </div>
             <div class="main-habit-img-content">
                 <div class="habit-img-content">
@@ -84,7 +87,20 @@
                     <p>We believe fitness should be accessible to everyone</p>
                 </div>
             </div>
-         </section>
+        </section>
+        <!-- Run an extra mile easily section -->
+        <section id="sec-2">
+            <div class="run">
+                <div class="run-content">
+                    <h2>Run an Extra <br> Mile Easily</h2>
+                    <p>We believe fitness should be accessible to everyone,<br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                    <button class="btn-primary">Join Now</button>
+                </div>
+                <div class="run-img">
+                    <img src="images/run.jpg" alt="">
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
