--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <div>
                 <h3 class="fitness"><i>Fitness</i></h3>
             </div>
+            <div class="menu-icon">
+                <i class="fa-solid fa-bars"></i>
+            </div>
             <div class="nav-border">
                 <ul class="nav-links display-flex">
                     <li class="nav-item"><a href="" class="nav-link"><span id="home">Home</span></a></li>
@@ -100,6 +103,10 @@
                     <img src="images/run.jpg" alt="">
                 </div>
             </div>
+        </section>
+        <!-- BMI cal section -->
+        <section id="sec-3">
+            
         </section>
     </main>
 
