--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h1>Get body in <br> <span id="shape">shape</span> & stay <br> healthy</h1>
+                <h1>Get body in <br> <span id="shape">shape</span> & stay <br> healthy3</h1>
                 <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to
                     help you get fit and stay fit!</p>
                 <div class="banner-btn">
