--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h1>Get body in <br> <span id="shape">shape</span> & stay <br> healthy3</h1>
+                <h1>Get body in <br> <span id="shape">shape</span> & stay <br> healthy</h1>
                 <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to
                     help you get fit and stay fit!</p>
                 <div class="banner-btn">
@@ -41,7 +41,7 @@
             </div>
             <div class="banner-img">
                 <img src="images/images 2.png" alt="">
-                <div id="vdo1">
+                <!-- <div id="vdo1">
                     <i id="icon" class="fa-solid fa-play"></i>
                     <div id="vdo">
                         <span id="no">350+</span>
@@ -53,7 +53,7 @@
                         <span id="no">500+</span><br>
                         <span id="video">Free Workout Videos</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
        </section>
