--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             </div>
             <div class="banner-img">
-                <img src="images/images 2.png" alt="">
+                <h1>efwsedf</h1>
                 <!-- <div id="vdo1">
                     <i id="icon" class="fa-solid fa-play"></i>
                     <div id="vdo">
