--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
             </div>
             <div class="banner-img">
-                <h1>efwsedf</h1>
-                <!-- <div id="vdo1">
+                <img src="images/Images 2.png" alt="">
+                <div id="vdo1">
                     <i id="icon" class="fa-solid fa-play"></i>
                     <div id="vdo">
                         <span id="no">350+</span>
@@ -53,7 +53,7 @@
                         <span id="no">500+</span><br>
                         <span id="video">Free Workout Videos</span>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
        </section>
@@ -106,7 +106,7 @@
         </section>
         <!-- BMI cal section -->
         <section id="sec-3">
-            
+            dfsdf
         </section>
     </main>
 
