added bmi section and styling

--- a/index.html
+++ b/index.html
@@ -11,52 +11,53 @@
 
 <body class="inter-font">
     <header>
-       <section class="header-section">
-        <nav class="navbar display-flex">
-            <div>
-                <h3 class="fitness"><i>Fitness</i></h3>
-            </div>
-            <div class="menu-icon">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-            <div class="nav-border">
-                <ul class="nav-links display-flex">
-                    <li class="nav-item"><a href="" class="nav-link"><span id="home">Home</span></a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Service</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">About</a></li>
-                </ul>
-            </div>
-        </nav>
-        <div class="banner">
-            <div class="banner-content">
-                <h1>Get body in <br> <span id="shape">shape</span> & stay <br> healthy</h1>
-                <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to
-                    help you get fit and stay fit!</p>
-                <div class="banner-btn">
-                    <button class="btn-primary">Join Club Now!</button>
-                    <button class="btn-primary1">Download App</button>
+        <section class="header-section">
+            <nav class="navbar display-flex">
+                <div>
+                    <h3 class="fitness"><i>Fitness</i></h3>
                 </div>
+                <div class="menu-icon">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+                <div class="nav-border">
+                    <ul class="nav-links display-flex">
+                        <li class="nav-item"><a href="" class="nav-link"><span id="home">Home</span></a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Service</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="banner">
+                <div class="banner-content">
+                    <h1>Get body in <br> <span id="shape">shape</span> & stay <br> healthy</h1>
+                    <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories
+                        to
+                        help you get fit and stay fit!</p>
+                    <div class="banner-btn">
+                        <button class="btn-primary">Join Club Now!</button>
+                        <button class="btn-primary1">Download App</button>
+                    </div>
 
-            </div>
-            <div class="banner-img">
-                <img src="images/Images 2.png" alt="">
-                <div id="vdo1">
-                    <i id="icon" class="fa-solid fa-play"></i>
-                    <div id="vdo">
-                        <span id="no">350+</span>
-                        <span id="video">Video tutorial</span>
+                </div>
+                <div class="banner-img">
+                    <img src="images/Images 2.png" alt="">
+                    <div id="vdo1">
+                        <i id="icon" class="fa-solid fa-play"></i>
+                        <div id="vdo">
+                            <span id="no">350+</span>
+                            <span id="video">Video tutorial</span>
+                        </div>
+                    </div>
+                    <div id="vdo2">
+                        <div id="vdo3">
+                            <span id="no">500+</span><br>
+                            <span id="video">Free Workout Videos</span>
+                        </div>
                     </div>
                 </div>
-                <div id="vdo2">
-                    <div id="vdo3">
-                        <span id="no">500+</span><br>
-                        <span id="video">Free Workout Videos</span>
-                    </div>
-                </div>
             </div>
-        </div>
-       </section>
+        </section>
 
     </header>
 
@@ -96,7 +97,8 @@
             <div class="run">
                 <div class="run-content">
                     <h2>Run an Extra <br> Mile Easily</h2>
-                    <p>We believe fitness should be accessible to everyone,<br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                    <p>We believe fitness should be accessible to everyone,<br> everywhere, regardless of income or
+                        access to a gym. With <br> hundreds of professional workouts.</p>
                     <button class="btn-primary">Join Now</button>
                 </div>
                 <div class="run-img">
@@ -106,7 +108,63 @@
         </section>
         <!-- BMI cal section -->
         <section id="sec-3">
-            dfsdf
+            <div class="bmi">
+                <div class="bmi-table">
+                    <h3>BMI Calculator Chart</h3>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>BMI</th>
+                                <th>Weight Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Below 18.5</td>
+                                <td>Underweight</td>
+                            </tr>
+                            <tr>
+                                <td>18.5 - 24.9</td>
+                                <td>Healthy</td>
+                            </tr>
+                            <tr>
+                                <td>25.0 - 29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr>
+                                <td>30.0 - and Above</td>
+                                <td>Obese</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="bmi-form">
+                    <h3>Calculate your BMI</h3>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access
+                        to a gym. </p>
+                    <div class="form-field">
+                        <div id="field-1">
+                            <input type="text" placeholder="Height/cm">
+                            <input type="text" placeholder="Weight/kg">
+                        </div>
+                        <div id="field-1">
+                            <input type="text" placeholder="Age">
+                            <select class="select-ang" name="" id="">
+                                <option value="">Sex</option>
+                            </select>
+                            <div class="icon1"><i class="fa-solid fa-angle-down"></i></div>
+                        </div>
+                        <div id="field-2">
+                            <select class="select-ang" name="" id="">
+                                <option value="">Select an activity factor</option>
+                            </select>
+                            <div class="icon1"><i class="fa-solid fa-angle-down"></i></div>
+                        </div>
+                        <button class="btn-primary btn-cal">Calculate</button>
+                    </div>
+
+                </div>
+            </div>
         </section>
     </main>
 
