added meet our team section and responsive it

--- a/index.html
+++ b/index.html
@@ -166,10 +166,67 @@
                 </div>
             </div>
         </section>
+        <!-- Meet our team section -->
+         <section id="sec-4">
+            <div class="team-container">
+                <h2>Meet Our Team</h2>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+            </div>
+            <div class="team-img-container">
+                <div class="row1">
+                    <div class="team-card">
+                        <img src="images/trainer1.png" alt="">
+                        <div class="team-card-des">
+                            <h5 class="trainer-name">Jerome Bell</h5>
+                            <p class="position">Trainer</p>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <img src="images/trainer2.png" alt="">
+                        <div class="team-card-des">
+                            <h5 class="trainer-name">Cameron Williamson</h5>
+                            <p class="position">Trainer</p>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <img src="images/trainer3.png" alt="">
+                        <div class="team-card-des">
+                            <h5 class="trainer-name">Darrell Steward</h5>
+                            <p class="position">Trainer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row1 row2">
+                    <div class="team-card">
+                        <img src="images/trainer4.png" alt="">
+                        <div class="team-card-des">
+                            <h5 class="trainer-name">Dianne Russell</h5>
+                            <p class="position">Trainer</p>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <img src="images/trainer5.png" alt="">
+                        <div class="team-card-des">
+                            <h5 class="trainer-name">Cody Fisher</h5>
+                            <p class="position">Trainer</p>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <img src="images/trainer6.png" alt="">
+                        <div class="team-card-des">
+                            <h5 class="trainer-name">Theresa Webb</h5>
+                            <p class="position">Trainer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </section>
     </main>
 
-    <footer>
-
+    <footer id="footer">
+        <section class="footer-container">
+            <H1>Gello</H1>
+        </section>
     </footer>
 </body>
 
