--- a/index.html
+++ b/index.html
@@ -225,7 +225,32 @@
 
     <footer id="footer">
         <section class="footer-container">
-            <H1>Gello</H1>
+           <div class="footer-container-content">
+                <div class="col-1">
+                    <h1><i>Fitness</i></h1>
+                    <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                </div>
+                <div class="col-2">
+                        <h3>Get Started</h3>
+                        <h5>Service</h5>
+                        <h5>Contact Us</h5>
+                        <h5>Affiliate Program</h5>
+                        <h5>About Us</h5>
+                </div>
+                <div class="col-2">
+                        <h3>Get Started</h3>
+                        <h5>Fitness</h5>
+                        <h5>Platform</h5>
+                        <h5>Workout Libary</h5>
+                        <h5>App Design</h5>
+                </div>
+           </div>
+           <div>
+                <hr>
+           </div>
+           <div class="all-right">
+                <p>All right reserved @Fitness 2024</p>
+           </div>
         </section>
     </footer>
 </body>
