--- a/index.html
+++ b/index.html
@@ -106,6 +106,52 @@
                 </div>
             </div>
         </section>
+        <!-- Package section -->
+        <section id="sec-5">
+            <div class="packages-content">
+                <h2>Our Packages</h2>
+                <p>You can choose our two best packages. Our packages are light cost so that <br> anyone can subscribe our packages. So subcribe our packages and start with <Span id="fit">Fitness </Span>Team</p>
+            </div>
+            <div class="Package-container">
+                <div class="Package-container-img">
+                    <img src="images/package-img.jpg" alt="">
+                </div>
+                <div class="packages">
+                    <div class="btn">
+                        <h4 class="btn-primary btnp">$50</h4>
+                    </div>
+                    <h3>Basic Package</h3>
+                    <h5>Monthly</h4>
+                    <div>
+                        <hr>
+                    </div>
+                    <p><i class="fa-regular fa-circle-check"></i> Gym facilities during hours</p>
+                    <p><i class="fa-regular fa-circle-check"></i> Use of cardio & strength equipment</p>
+                    <p><i class="fa-regular fa-circle-check"></i> Access to locker rooms</p>
+                    <p><i class="fa-regular fa-circle-check"></i> Discounted rates on group fitness</p>
+                    <p><i class="fa-regular fa-circle-check"></i> Goal setting session with a trainer</p>
+                    <button class="btn-primary1 btnp1">Choose Plan</button>
+                </div>
+                <div class="packages">
+                    <div class="btn">
+                        <h4 class="btn-primary btnp">$150</h4>
+                    </div>
+                    <h3>ULTIMATE BOST</h3>
+                    <h5>Monthly</h4>
+                    <div>
+                        <hr>
+                    </div>
+                    <p><i class="fa-regular fa-circle-check"></i> Gym facilities during hours</p>
+                    <p><i class="fa-regular fa-circle-check"></i> Use of cardio & strength equipment</p>
+                    <p><i class="fa-regular fa-circle-check"></i> Access to locker rooms</p>
+                    <p><i class="fa-regular fa-circle-check"></i> Discounted rates on group fitness</p>
+                    <p><i class="fa-regular fa-circle-check"></i> Goal setting session with a trainer</p>
+                    <button class="btn-primary1 btnp1">Choose Plan</button>
+                </div>
+                
+                
+            </div>
+        </section>
         <!-- BMI cal section -->
         <section id="sec-3">
             <div class="bmi">
@@ -167,10 +213,11 @@
             </div>
         </section>
         <!-- Meet our team section -->
-         <section id="sec-4">
+        <section id="sec-4">
             <div class="team-container">
                 <h2>Meet Our Team</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access
+                    to a gym.</p>
             </div>
             <div class="team-img-container">
                 <div class="row1">
@@ -220,37 +267,38 @@
                     </div>
                 </div>
             </div>
-         </section>
+        </section>
     </main>
 
     <footer id="footer">
         <section class="footer-container">
-           <div class="footer-container-content">
+            <div class="footer-container-content">
                 <div class="col-1">
                     <h1><i>Fitness</i></h1>
-                    <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                    <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or
+                        access to a gym. With <br> hundreds of professional workouts.</p>
                 </div>
                 <div class="col-2">
-                        <h3>Get Started</h3>
-                        <h5>Service</h5>
-                        <h5>Contact Us</h5>
-                        <h5>Affiliate Program</h5>
-                        <h5>About Us</h5>
+                    <h3>Get Started</h3>
+                    <h5>Service</h5>
+                    <h5>Contact Us</h5>
+                    <h5>Affiliate Program</h5>
+                    <h5>About Us</h5>
                 </div>
                 <div class="col-2">
-                        <h3>Get Started</h3>
-                        <h5>Fitness</h5>
-                        <h5>Platform</h5>
-                        <h5>Workout Libary</h5>
-                        <h5>App Design</h5>
+                    <h3>Get Started</h3>
+                    <h5>Fitness</h5>
+                    <h5>Platform</h5>
+                    <h5>Workout Libary</h5>
+                    <h5>App Design</h5>
                 </div>
-           </div>
-           <div>
+            </div>
+            <div>
                 <hr>
-           </div>
-           <div class="all-right">
+            </div>
+            <div class="all-right">
                 <p>All right reserved @Fitness 2024</p>
-           </div>
+            </div>
         </section>
     </footer>
 </body>
